kubernetes/configs-defaultshceduler/tracker-workflow1-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: tracker-workflow1
  labels:
    app: tracker-workflow1
spec:
  replicas: 1
  selector:
    matchLabels:
      app: tracker-workflow1
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: tracker-workflow1
    spec:
      volumes:
        - name: pv-tracker
          persistentVolumeClaim:
            claimName: pvc-tracker
      affinity:
        nodeAffinity:
          requiredDuringSchedulingIgnoredDuringExecution:
            nodeSelectorTerms:
            - matchExpressions:
              - key: nodename
                operator: In
                values:
                - nxt2030
      containers:
        - image: 172.30.0.49:5000/tracker-workflow1
          imagePullPolicy: IfNotPresent
          name: tracker-workflow1
          resources:
           requests:
             memory: "512Mi"
             cpu: "1"
           limits:
             memory: "512Mi"
             cpu: "1"
          ports:
            - containerPort: 8001
              protocol: TCP
          volumeMounts:
            - mountPath: /mlflow
              name: pv-tracker
      restartPolicy: Always
