kubernetes/configs-defaultshceduler/tracker-workflow2-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: tracker-workflow2
  labels:
    app: tracker-workflow2
spec:
  replicas: 1
  selector:
    matchLabels:
      app: tracker-workflow2
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: tracker-workflow2
    spec:
      volumes:
        - name: pv-tracker
          persistentVolumeClaim:
            claimName: pvc-tracker
      containers:
        - image: 172.30.0.49:5000/tracker-workflow3
          imagePullPolicy: IfNotPresent
          name: tracker-workflow2
          ports:
            - containerPort: 8002
              protocol: TCP
          volumeMounts:
            - mountPath: /mlflow
              name: pv-tracker
      restartPolicy: Always
