kubernetes/configs-defaultshceduler/predictor-service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: predictor
  name: predictor
spec:
  type: NodePort
  ports:
  - port: 5001
    targetPort: 8080
    nodePort: 30012
  selector:
    app: predictor
