kubernetes/configs-defaultshceduler/workflow-gateway.yaml
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: workflow-gateway
spec:
  selector:
    istio: ingressgateway # use istio default controller
  servers:
  - port:
      number: 80
      name: http
      protocol: HTTP
    hosts:
    - "*"
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: workflow
spec:
  hosts:
  - "*"
  gateways:
  - workflow-gateway
  http:
  - match:
    - uri:
        prefix: /invocations
    route:
    - destination:
        host: invocations
        port:
          number: 5001
